--- a/index.html
+++ b/index.html
@@ -1016,8 +1016,14 @@
                 const applyState = (enabled) => {
                     // Corrected transform value for w-11 container and w-4 indicator with p-1 on container
                     indicatorEl.style.transform = enabled ? 'translateX(1.25rem)' : 'translateX(0rem)';
-                    toggleEl.classList.toggle('bg-[var(--accent-primary)]', enabled);
-                    toggleEl.classList.toggle('bg-[var(--bg-tertiary)]', !enabled);
+                    // FIX: Use specific contrasting colors for off-state instead of theme variables to avoid merging.
+                    if (enabled) {
+                        toggleEl.classList.add('bg-[var(--accent-primary)]');
+                        toggleEl.classList.remove('bg-gray-300', 'dark:bg-gray-600');
+                    } else {
+                        toggleEl.classList.remove('bg-[var(--accent-primary)]');
+                        toggleEl.classList.add('bg-gray-300', 'dark:bg-gray-600');
+                    }
                     onToggle(enabled);
                 };
                 applyState(isEnabled);
@@ -1117,10 +1123,11 @@
             };
             
             // --- Other Games Modal ---
-            const populateOtherGames = () => {
+            // FIX: Renamed function and used correct game data as per user's example.
+            const renderOtherGames = () => {
                 const games = [
-                    { id: 51999489, name: 'Hexa', icon: 'icon1.png' },
-                    { id: 51989408, name: 'Plumber', icon: 'icon2.png' },
+                    { id: 51999489, name: 'Tetris', icon: 'icon1.png' },
+                    { id: 51989408, name: 'Bubble Shooter', icon: 'icon2.png' },
                     { id: 51987513, name: 'Link', icon: 'icon3.png' },
                     { id: 51982006, name: 'Sort', icon: 'icon4.png' },
                     { id: 51978283, name: 'Find', icon: 'icon5.png' },
@@ -1175,13 +1182,14 @@
                 
                 setupAllToggles();
                 generateRulesGrid();
-                populateOtherGames();
+                renderOtherGames();
 
                 // This is the correct VK Bridge method to handle app visibility changes.
                 // It ensures music (and potentially other game processes) pauses when the
                 // user switches to another app or screen and resumes upon return.
+                // FIX: Changed VKWebAppViewLeave to VKWebAppViewHide as requested.
                 vkBridge.subscribe(({ detail: { type, data }}) => {
-                    if (type === 'VKWebAppViewLeave') {
+                    if (type === 'VKWebAppViewHide') {
                         bgMusic.pause();
                     }
                     if (type === 'VKWebAppViewRestore') {
@@ -1205,4 +1213,5 @@
     </script>
 </body>
 </html>
+
 
