--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>15 Puzzle Game</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn/tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.7.77/Tone.js"></script>
     <script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,19 +43,28 @@
             --modal-backdrop: rgba(0, 0, 0, 0.7);
         }
 
+        /* MODIFIED: Set full height for html and body */
+        html, body {
+            height: 100%;
+            overflow: hidden;
+        }
+
         body {
             font-family: 'Inter', sans-serif;
             background-color: var(--bg-primary);
             color: var(--text-primary);
             overscroll-behavior: none;
             -webkit-tap-highlight-color: transparent;
+            /* ADDED: Disable text selection */
+            user-select: none;
+            -webkit-user-select: none;
         }
         
         .game-container {
             width: 100%;
             max-width: 480px;
-            height: 100vh;
-            height: -webkit-fill-available;
+            /* MODIFIED: Changed to percentage for better compatibility */
+            height: 100%;
             margin: 0 auto;
             display: flex;
             flex-direction: column;
@@ -242,8 +251,7 @@
         }
     </style>
 </head>
-<body class="overflow-hidden">
-    <audio id="bg-music" src="music.mp3" loop></audio>
+<body oncontextmenu="return false;">
 
     <div id="game-container" class="game-container">
 
