--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             transform: scale(1);
             will-change: transform, opacity;
             backface-visibility: hidden;
-            overflow-y: auto;
+            overflow-y: hidden; /* FIXED: Prevent scrollbar */
             padding-bottom: 50px; /* Space for banner ad */
         }
 
@@ -289,11 +289,12 @@
 
         <!-- ===== Classic Mode Size Selection Screen ===== -->
         <div id="classic-menu" class="screen hidden flex flex-col p-8">
-            <header class="flex items-center mb-8">
-                <button class="back-btn btn btn-secondary p-3 rounded-full">
+            <!-- FIXED: Header layout to prevent button overlap -->
+            <header class="relative flex justify-center items-center mb-8">
+                <button class="back-btn btn btn-secondary p-3 rounded-full absolute left-0">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
                 </button>
-                <h2 class="text-2xl font-bold text-center flex-grow -ml-12">Размер поля</h2>
+                <h2 class="text-2xl font-bold">Размер поля</h2>
             </header>
             <main class="flex-grow flex flex-col justify-center gap-4">
                  <button data-size="4" class="classic-size-btn btn bg-classic-1 text-classic-1 w-full py-4 rounded-xl text-lg font-bold ring-2 ring-inset ring-black/10">4 x 4</button>
@@ -304,11 +305,12 @@
         
         <!-- ===== Category Selection Screen ===== -->
         <div id="category-menu" class="screen hidden flex flex-col p-8">
-            <header class="flex items-center mb-8">
-                <button class="back-btn btn btn-secondary p-3 rounded-full">
+            <!-- FIXED: Header layout to prevent button overlap -->
+            <header class="relative flex justify-center items-center mb-8">
+                <button class="back-btn btn btn-secondary p-3 rounded-full absolute left-0">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
                 </button>
-                <h2 class="text-2xl font-bold text-center flex-grow -ml-12">Категории</h2>
+                <h2 class="text-2xl font-bold">Категории</h2>
             </header>
             <main class="flex-grow flex flex-col justify-center gap-4">
                  <button data-category="animals" class="relative category-btn btn bg-pastel-green text-pastel-green w-full py-4 rounded-xl text-lg font-bold ring-2 ring-inset ring-black/10">Животные<span class="level-display"></span></button>
@@ -318,13 +320,14 @@
             </main>
         </div>
 
-        <!-- ===== NEW: Custom Photo Size Selection Screen ===== -->
+        <!-- ===== Custom Photo Size Selection Screen ===== -->
         <div id="custom-photo-menu" class="screen hidden flex flex-col p-8">
-            <header class="flex items-center mb-8">
-                <button class="back-btn btn btn-secondary p-3 rounded-full">
+            <!-- FIXED: Header layout to prevent button overlap -->
+            <header class="relative flex justify-center items-center mb-8">
+                <button class="back-btn btn btn-secondary p-3 rounded-full absolute left-0">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
                 </button>
-                <h2 class="text-2xl font-bold text-center flex-grow -ml-12">Размер поля</h2>
+                <h2 class="text-2xl font-bold">Размер поля</h2>
             </header>
             <main class="flex-grow flex flex-col justify-center gap-4">
                  <button data-size="4" class="custom-size-btn btn bg-classic-1 text-classic-1 w-full py-4 rounded-xl text-lg font-bold ring-2 ring-inset ring-black/10">4 x 4</button>
@@ -945,7 +948,6 @@
                 showModal('win');
             }
 
-            // --- REPLACED: Ad Logic from Primer.docx ---
             const showInterstitialAd = async () => {
                 state.levelsCompletedSinceAd++;
                 await saveData('levelsCompletedSinceAd', state.levelsCompletedSinceAd);
