--- a/index.html
+++ b/index.html
@@ -1294,7 +1294,7 @@
                     { id: 53861990, name: 'Словли', icon: 'icon6.png' },
                     { id: 54023580, name: 'Brick Balls', icon: 'icon7.png' },
                     { id: 53965380, name: '2048', icon: 'icon8.png' },
-                    { id: 53970659, name: 'Math Matrix', icon: 'icon9.png' }
+                    { id: 54143992, name: 'Color Sort', icon: 'icon9.png' }
                 ];
                 const container = document.getElementById('other-games-container');
                 container.innerHTML = '';
